# lib/api-spec/openapi.yaml
@@ -201,6 +201,12 @@ paths:
           schema:
             type: string
             enum: [all, has_stub, missing_stub]
+        - name: sort
+          in: query
+          required: false
+          schema:
+            type: string
+            enum: [created_date_desc, created_date_asc, records_desc, records_asc, file_name, file_id_asc, file_id_desc]
         - name: limit
           in: query
           required: false
